class FeedStrategy {
    async execute(repository, params) {
      throw new Error("Method not implemented.");
    }
  }
  
  export default FeedStrategy;